 - enable saving qc outcomes for multi-component compositions
 - SeqQC GUI changes for multi-component compositions:
     enable display of autoqc results;
     enable manual QC
 - changes to allow for SeqQC display of results corresponding to multi-
   component compositions
 - Illumina QC data loader restricted to loading cluster density data, its
    data pre-loading functionality dropped

release 65.4
 - qX_yield autoqc check extension: capture and save yields for q30 and q40

release 65.3
 - fixed bug in cluster_density calculation where no TileMetrics interop
   file exists

release 65.2
 - add new metric mitochondrial genes content as mt_pct_tpm to RNA-SeQC check
 - can_run returns false for pulldown_metrics check for tag 0
 - genotype check does not require the existence of irods: input_files

release 65.1.1
 - explicitly use pre v6 bwa for rna_seqc rRNA alignment as input not name sorted 
   (tolerated in old version but not bwa0_6)

release 65.1
 - bwa to bwa0_6 for rna_seqc rRNA alignment

release 65.0
 - adapter autoqc check - discard code for fastq input
 - add genotype_call_results_reporter script to report genotype_call
   results to the LIMs
 - tag_metics matches_pf_percent only stored to three decimals places now
   so trim in viewer
 - modified spatial filter qc check to read all run_lane filter.stats files
 - changed naming of spatial_filter stats files to <run>_<lane>*.spatial_filter.stats
 - upstream_tags qc check - replaced bamindexdecoder with bambi decode
 - dropped ability for qc checks to sub-sample input fastq
     instead run the checks directly off the cached fastq files
 - NovaSeq changes, new InterOp file format and per lane read counts now 64-bit unsigned ints
 - make travis happy as running apt-get update by default was disabled.
 - NovaSeq run info file size is around 95KB, too large for the text column type.
     Column type changed to mediumtext.
 - upstream_tags autoqc check: standardise access to the tracking database