@@ -4,14 +4,50 @@ use Moose;
 use namespace::autoclean;
 use Carp;
 
+use File::Find;
+
 extends qw(npg_qc::autoqc::checks::check);
 
+## no critic (Documentation::RequirePodAtEnd)
 our $VERSION = '0';
+
+=head1 NAME
+
+npg_qc::autoqc::checks::spatial_filter
+
+=head1 SYNOPSIS
+
+Inherits from npg_qc::autoqc::checks::check.
+See description of attributes in the documentation for that module.
+  my $check = npg_qc::autoqc::checks::spatial_filter->new(rpt_list => q{1234:1:5;1234:2:5}, --filename_root=1234_1, --qc_out=out/qc, -qc_in_roots=in/qc_dir);
+
+=head1 DESCRIPTION
+
+A check which aggregates results from spatial_filter application stats files
+
+=head1 SUBROUTINES/METHODS
+
+=cut
+
+=head2 qc_in_roots
+
+Array reference with names of input directories to be searched for stats files
+
+=cut
+
+has 'qc_in_roots'    => (isa        => 'ArrayRef',
+                         is         => 'ro',
+                         required   => 1,
+                        );
 
 override 'execute' => sub {
   my ($self) = @_;
 
-  $self->result->parse_output($self->input_files); #read stderr from spatial_filter -a for each sample
+  my @infiles=();
+
+  find(sub { if( /spatial_filter.stats$/ ) { push @infiles, $File::Find::name }}, @{$self->qc_in_roots});
+
+  $self->result->parse_output(\@infiles); #read stderr from spatial_filter -a for each sample
 
   return 1;
 };
@@ -33,7 +69,7 @@ npg_qc::autoqc::checks::spatial_filter
 
 =head1 DESCRIPTION
 
-    Parse err stream from spatial_filter -a to record number of read filtered
+    Parse stats files produced by spatial_filter application and aggregate number of reads filtered
 
 
 =head1 SUBROUTINES/METHODS
